Money Calculation fixed to include modifier for non-regular shift hours. Added Proper money per hour value. Corrected mickey and minnie positions on Ios browsers.

--- a/master.scss
+++ b/master.scss
@@ -34,7 +34,7 @@ div.wrapper{
 
 div.left{
     position: absolute;
-    top: 60px;
+    top: 80px;
     left: 0;
     width: 95px;
     height: 120px;
@@ -46,7 +46,7 @@ div.left{
 
 div.right{
     position: absolute;
-    top: 60px;
+    top: 80px;
     right: 0;
     width: 90px;
     height: 110px;
